Kubernetes/CKA Stuff/NP/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mydb
  namespace: network
  labels:
    name: mydb
spec:
  containers:
  - name: mydb
    image: busybox
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
